# SikshaAi

./: README.md  run.ps1
Teacher-Backend/: .env.example  .gitignore  database.py  main.py  pyproject.toml  server.py
Teacher-Backend/controllers/: auth.py  classes.py  materials.py
Teacher-Backend/helper/: auth_funcs.py  gcpUpload.py  model.py
Teacher-Frontend/: .gitignore  compose.yml  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
Teacher-Frontend/src/: App.jsx  main.jsx
Teacher-Frontend/src/Redux/: store.jsx
Teacher-Frontend/src/Redux/Slices/: SectionSlicer.jsx
Teacher-Frontend/src/components/: DifficultyCard.jsx  HandleNavBarClicks.jsx  Navbar.jsx  PastProjectCard.jsx  SectionCard.jsx  TestEnvsideBar.jsx
Teacher-Frontend/src/components/Auth/: AuthContext.jsx  FireBase.jsx  GoogleSignIn.jsx  Profile.jsx  SignIn.jsx  Signup.jsx
Teacher-Frontend/src/components/builder-components/: Navbar.jsx  Sidebar.jsx
Teacher-Frontend/src/components/builder-components/Assignment/: AssignmentForm.jsx  StudentClassList.jsx
Teacher-Frontend/src/components/css/: question.css
Teacher-Frontend/src/components/questions/: Mcq.jsx  MultipleMcq.jsx  Parah.jsx  Question.jsx  Subjective.jsx  TrueFalse.jsx
Teacher-Frontend/src/hooks/: useAuth.js
Teacher-Frontend/src/pages/: Assignments.jsx  ClassRoomLayout.jsx  ClassRoomStudents.jsx  ClassStudents.jsx  Classes.jsx  Doubts.jsx  GenerateSections.jsx  LandingPage.jsx  PastProjects.jsx  RecentTests.jsx  Resources.jsx  SectionDetails.jsx  StudentsPage.jsx  TestEnv.jsx  UploadFile.jsx
(+12 files in other folders)
